# image_processor

./: CMakeLists.txt  custom_exceptions.cpp  custom_exceptions.h  filter_applier.cpp  filter_applier.h  image.cpp  image.h  image_processor.cpp  parser.cpp  parser.h  readme.md
filters/: crop_filter.cpp  crop_filter.h  crystallize_advanced_filter.cpp  crystallize_advanced_filter.h  crystallize_filter.cpp  crystallize_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filter.h  gaussian_blur.cpp  gaussian_blur.h  grayscale_filter.cpp  grayscale_filter.h  matrix_filter.cpp  matrix_filter.h  negative_filter.cpp  negative_filter.h  sharp_filter.cpp  sharp_filter.h
io/: read_image.cpp  read_image.h  write_image.cpp  write_image.h
